tests/should_fail/bug/692.coma
module M_692__incorrect [#"692.rs" 9 0 9 76]
  let%span s692 = "692.rs" 9 57 9 61
  let%span s692'0 = "692.rs" 9 66 9 72
  let%span s692'1 = "692.rs" 6 0 7 87
  let%span s692'2 = "692.rs" 8 10 8 15
  let%span sops = "../../../creusot-contracts/src/std/ops.rs" 169 14 169 114
  let%span sops'0 = "../../../creusot-contracts/src/std/ops.rs" 174 14 174 100
  let%span sops'1 = "../../../creusot-contracts/src/std/ops.rs" 179 14 179 61
  let%span sops'2 = "../../../creusot-contracts/src/std/ops.rs" 133 4 133 61
  let%span sops'3 = "../../../creusot-contracts/src/std/ops.rs" 134 4 134 40
  let%span sops'4 = "../../../creusot-contracts/src/std/ops.rs" 139 4 139 35
  let%span sops'5 = "../../../creusot-contracts/src/std/ops.rs" 144 4 144 33
  let%span sops'6 = "../../../creusot-contracts/src/std/ops.rs" 145 4 145 30
  let%span sops'7 = "../../../creusot-contracts/src/std/ops.rs" 146 4 146 32
  let%span sops'8 = "../../../creusot-contracts/src/std/ops.rs" 151 14 152 104
  
  use creusot.prelude.Any
  
  type t_B
  
  predicate inv (_0: t_B)
  
  predicate resolve (_0: t_B)
  
  type t_C
  
  predicate inv'0 (_0: t_C)
  
  predicate resolve'0 (_0: t_C)
  
  predicate precondition (self: t_C) (args: ())
  
  predicate precondition'0 (self: t_B) (args: bool)
  
  predicate postcondition_once (self: t_C) (args: ()) (result: bool)
  
  predicate postcondition_mut (self: t_C) (args: ()) (result_state: t_C) (result: bool)
  
  function fn_mut_once (self: t_C) (args: ()) (res: bool) : ()
  
  axiom fn_mut_once_spec: forall self: t_C, args: (), res: bool. [%#sops'8] postcondition_once self args res
      = (exists res_state: t_C. postcondition_mut self args res_state res /\ resolve'0 res_state)
  
  predicate hist_inv (self: t_C) (result_state: t_C)
  
  function hist_inv_trans (self: t_C) (b: t_C) (c: t_C) : ()
  
  axiom hist_inv_trans_spec: forall self: t_C, b: t_C, c: t_C. ([%#sops'5] hist_inv self b)
      -> ([%#sops'6] hist_inv b c) -> ([%#sops'7] hist_inv self c)
  
  function hist_inv_refl (self: t_C) : ()
  
  axiom hist_inv_refl_spec: forall self: t_C. [%#sops'4] hist_inv self self
  
  function postcondition_mut_hist_inv (self: t_C) (args: ()) (res_state: t_C) (res: bool) : ()
  
  axiom postcondition_mut_hist_inv_spec:
    forall self: t_C, args: (), res_state: t_C, res: bool. ([%#sops'2] postcondition_mut self args res_state res)
      -> ([%#sops'3] hist_inv self res_state)
  
  function fn_hist_inv (self: t_C) (res_state: t_C) : ()
  
  axiom fn_hist_inv_spec: forall self: t_C, res_state: t_C. [%#sops'1] hist_inv self res_state = (self = res_state)
  
  predicate postcondition (self: t_C) (args: ()) (result: bool)
  
  function fn_once (self: t_C) (args: ()) (res: bool) : ()
  
  axiom fn_once_spec: forall self: t_C, args: (), res: bool. [%#sops'0] postcondition_once self args res
      = (postcondition self args res /\ resolve'0 self)
  
  function fn_mut (self: t_C) (args: ()) (res_state: t_C) (res: bool) : ()
  
  axiom fn_mut_spec:
    forall self: t_C, args: (), res_state: t_C, res: bool. [%#sops] postcondition_mut self args res_state res
      = (postcondition self args res /\ self = res_state)
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec incorrect [#"692.rs" 9 0 9 76] (cond: t_C) (branch: t_B) (return' (x: ())) =
    {[@expl:incorrect 'cond' type invariant] [%#s692] inv'0 cond}
    {[@expl:incorrect 'branch' type invariant] [%#s692'0] inv branch}
    {[@expl:incorrect requires] [%#s692'1] precondition cond ()
    /\ (forall b: bool. precondition'0 branch b
      /\ (exists b'0: bool. forall b0: bool. postcondition cond () b0 -> b0 = b'0))}
    (! bb0
    [ bb0 = s0
      [ s0 = {[@expl:type invariant] inv branch'0} s1
      | s1 = -{resolve branch'0}- s2
      | s2 = {[@expl:type invariant] inv'0 cond'0} s3
      | s3 = -{resolve'0 cond'0}- s4
      | s4 = bb2 ]
    | bb2 = return''0 {_0} ] [ & _0: () = Any.any_l () | & cond'0: t_C = cond | & branch'0: t_B = branch ])
    [ return''0 (result: ()) -> {[@expl:incorrect ensures] [%#s692'2] false} (! return' {result}) ]
end
module M_692__valid_normal [#"692.rs" 12 0 12 34]
  let%span s692 = "692.rs" 13 16 13 20
  let%span s692'0 = "692.rs" 11 10 11 15
  let%span s692'1 = "692.rs" 15 11 15 15
  let%span s692'2 = "692.rs" 14 25 14 45
  let%span s692'3 = "692.rs" 17 25 17 26
  let%span s692'4 = "692.rs" 17 36 17 37
  let%span s692'5 = "692.rs" 16 27 16 62
  let%span s692'6 = "692.rs" 6 0 7 87
  let%span s692'7 = "692.rs" 8 10 8 15
  let%span s692'8 = "692.rs" 16 17 16 64
  let%span s692'9 = "692.rs" 14 15 14 47
  let%span sops = "../../../creusot-contracts/src/std/ops.rs" 133 4 133 61
  let%span sops'0 = "../../../creusot-contracts/src/std/ops.rs" 134 4 134 40
  let%span sops'1 = "../../../creusot-contracts/src/std/ops.rs" 139 4 139 35
  let%span sops'2 = "../../../creusot-contracts/src/std/ops.rs" 144 4 144 33
  let%span sops'3 = "../../../creusot-contracts/src/std/ops.rs" 145 4 145 30
  let%span sops'4 = "../../../creusot-contracts/src/std/ops.rs" 146 4 146 32
  let%span sops'5 = "../../../creusot-contracts/src/std/ops.rs" 151 14 152 104
  let%span sops'6 = "../../../creusot-contracts/src/std/ops.rs" 169 14 169 114
  let%span sops'7 = "../../../creusot-contracts/src/std/ops.rs" 174 14 174 100
  let%span sops'8 = "../../../creusot-contracts/src/std/ops.rs" 179 14 179 61
  let%span sord = "../../../creusot-contracts/src/logic/ord.rs" 129 39 129 89
  let%span sord'0 = "../../../creusot-contracts/src/logic/ord.rs" 134 39 134 86
  let%span sord'1 = "../../../creusot-contracts/src/logic/ord.rs" 139 39 139 86
  let%span sord'2 = "../../../creusot-contracts/src/logic/ord.rs" 144 39 144 89
  let%span sord'3 = "../../../creusot-contracts/src/logic/ord.rs" 149 39 149 70
  let%span sord'4 = "../../../creusot-contracts/src/logic/ord.rs" 154 40 154 57
  let%span sord'5 = "../../../creusot-contracts/src/logic/ord.rs" 155 40 155 57
  let%span sord'6 = "../../../creusot-contracts/src/logic/ord.rs" 156 39 156 56
  let%span sord'7 = "../../../creusot-contracts/src/logic/ord.rs" 161 40 161 70
  let%span sord'8 = "../../../creusot-contracts/src/logic/ord.rs" 162 39 162 72
  let%span sord'9 = "../../../creusot-contracts/src/logic/ord.rs" 167 40 167 73
  let%span sord'10 = "../../../creusot-contracts/src/logic/ord.rs" 168 39 168 69
  let%span sord'11 = "../../../creusot-contracts/src/logic/ord.rs" 173 39 173 84
  let%span sord'12 = "../../../creusot-contracts/src/logic/ord.rs" 230 16 236 17
  let%span sresolve = "../../../creusot-contracts/src/resolve.rs" 52 20 52 34
  
  use creusot.int.UInt32
  use creusot.prelude.Any
  use creusot.prelude.MutBorrow
  
  type closure1 = { _0: UInt32.t }
  
  type t_Ordering = C_Less | C_Equal | C_Greater
  
  function cmp_log (self: UInt32.t) (o: UInt32.t) : t_Ordering = [%#sord'12] if UInt32.lt self o then
      C_Less
    else
      if self = o then C_Equal else C_Greater
  
  
  function eq_cmp (x: UInt32.t) (y: UInt32.t) : ()
  
  axiom eq_cmp_spec: forall x: UInt32.t, y: UInt32.t. [%#sord'11] (x = y) = (cmp_log x y = C_Equal)
  
  function antisym2 (x: UInt32.t) (y: UInt32.t) : ()
  
  axiom antisym2_spec: forall x: UInt32.t, y: UInt32.t. ([%#sord'9] cmp_log x y = C_Greater)
      -> ([%#sord'10] cmp_log y x = C_Less)
  
  function antisym1 (x: UInt32.t) (y: UInt32.t) : ()
  
  axiom antisym1_spec: forall x: UInt32.t, y: UInt32.t. ([%#sord'7] cmp_log x y = C_Less)
      -> ([%#sord'8] cmp_log y x = C_Greater)
  
  function trans (x: UInt32.t) (y: UInt32.t) (z: UInt32.t) (o: t_Ordering) : ()
  
  axiom trans_spec: forall x: UInt32.t, y: UInt32.t, z: UInt32.t, o: t_Ordering. ([%#sord'4] cmp_log x y = o)
      -> ([%#sord'5] cmp_log y z = o) -> ([%#sord'6] cmp_log x z = o)
  
  function refl (x: UInt32.t) : ()
  
  axiom refl_spec: forall x: UInt32.t. [%#sord'3] cmp_log x x = C_Equal
  
  function cmp_gt_log (x: UInt32.t) (y: UInt32.t) : ()
  
  axiom cmp_gt_log_spec: forall x: UInt32.t, y: UInt32.t. [%#sord'2] UInt32.gt x y = (cmp_log x y = C_Greater)
  
  function cmp_ge_log (x: UInt32.t) (y: UInt32.t) : ()
  
  axiom cmp_ge_log_spec: forall x: UInt32.t, y: UInt32.t. [%#sord'1] UInt32.ge x y = (cmp_log x y <> C_Less)
  
  function cmp_lt_log (x: UInt32.t) (y: UInt32.t) : ()
  
  axiom cmp_lt_log_spec: forall x: UInt32.t, y: UInt32.t. [%#sord'0] UInt32.lt x y = (cmp_log x y = C_Less)
  
  function cmp_le_log (x: UInt32.t) (y: UInt32.t) : ()
  
  axiom cmp_le_log_spec: forall x: UInt32.t, y: UInt32.t. [%#sord] UInt32.le x y = (cmp_log x y <> C_Greater)
  
  let rec closure1 [#"692.rs" 14 15 14 47] (self: closure1) (return' (x: bool)) = (! bb0
    [ bb0 = s0
      [ s0 = [ &res <- UInt32.gt _1._0 ([%#s692'1] (7: UInt32.t)) ] s1
      | s1 = [ &_0'0 <- res ] s2
      | s2 = return''0 {_0'0} ] ] [ & _0'0: bool = Any.any_l () | & _1: closure1 = self | & res: bool = Any.any_l () ])
    [ return''0 (result: bool) -> {[@expl:closure ensures] [%#s692'2] result = UInt32.gt self._0 (7: UInt32.t)}
      (! return' {result}) ]
  
  type closure2 = { _0'0: MutBorrow.t UInt32.t }
  
  predicate resolve (self: MutBorrow.t closure2) = [%#sresolve] self.final = self.current
  
  meta "rewrite_def" predicate resolve
  
  predicate resolve'0 (_0'1: MutBorrow.t closure2) = resolve _0'1
  
  predicate postcondition_once (self: closure2) (args: bool) (result: ()) =
    [%#s692'8] let b = args in b /\ (self._0'0).final = (2: UInt32.t) \/ not b /\ (self._0'0).final = (1: UInt32.t)
  
  predicate resolve'1 (self: MutBorrow.t UInt32.t) = [%#sresolve] self.final = self.current
  
  meta "rewrite_def" predicate resolve'1
  
  predicate resolve'2 (_0'1: MutBorrow.t UInt32.t) = resolve'1 _0'1
  
  predicate resolve'3 (_0'1: closure2) = resolve'2 _0'1._0'0
  
  predicate hist_inv (self: closure2) (result_state: closure2) =
    [%#s692'8] (result_state._0'0).final = (self._0'0).final
  
  predicate postcondition_mut (self: closure2) (args: bool) (result_state: closure2) (result: ()) =
    [%#s692'8] let b = args in (b /\ (result_state._0'0).current = (2: UInt32.t)
      \/ not b /\ (result_state._0'0).current = (1: UInt32.t))
    /\ hist_inv self result_state
  
  function fn_mut_once (self: closure2) (args: bool) (res: ()) : ()
  
  axiom fn_mut_once_spec: forall self: closure2, args: bool, res: (). [%#sops'5] postcondition_once self args res
      = (exists res_state: closure2. postcondition_mut self args res_state res /\ resolve'3 res_state)
  
  function hist_inv_trans (self: closure2) (b: closure2) (c: closure2) : ()
  
  axiom hist_inv_trans_spec: forall self: closure2, b: closure2, c: closure2. ([%#sops'2] hist_inv self b)
      -> ([%#sops'3] hist_inv b c) -> ([%#sops'4] hist_inv self c)
  
  function hist_inv_refl (self: closure2) : ()
  
  axiom hist_inv_refl_spec: forall self: closure2. [%#sops'1] hist_inv self self
  
  function postcondition_mut_hist_inv (self: closure2) (args: bool) (res_state: closure2) (res: ()) : ()
  
  axiom postcondition_mut_hist_inv_spec:
    forall self: closure2, args: bool, res_state: closure2, res: (). ([%#sops] postcondition_mut self args res_state res)
      -> ([%#sops'0] hist_inv self res_state)
  
  let rec closure2 [#"692.rs" 16 17 16 64] (self: MutBorrow.t closure2) (b: bool) (return' (x: ())) = (! bb0
    [ bb0 = any [ br0 -> {b'0 = false} (! bb2) | br1 -> {b'0} (! bb1) ]
    | bb1 = s0 [ s0 = [ &_4 <- [%#s692'3] (2: UInt32.t) ] s1 | s1 = bb3 ]
    | bb2 = s0 [ s0 = [ &_4 <- [%#s692'4] (1: UInt32.t) ] s1 | s1 = bb3 ]
    | bb3 = s0
      [ s0 = [ &_1 <- { _1 with current = { _0'0 = { (_1.current)._0'0 with current = _4 } } } ] s1
      | s1 = -{resolve'0 _1}- s2
      | s2 = return''0 {_0'1} ] ]
    [ & _0'1: () = Any.any_l () | & _1: MutBorrow.t closure2 = self | & b'0: bool = b | & _4: UInt32.t = Any.any_l () ])
    [ return''0 (result: ()) -> {[@expl:closure ensures] [%#s692'5] b /\ ((self.final)._0'0).current = (2: UInt32.t)
      \/ not b /\ ((self.final)._0'0).current = (1: UInt32.t)}
      {[@expl:closure hist_inv post] hist_inv self.current self.final}
      (! return' {result}) ]
  
  predicate precondition (self: closure1) (args: ()) = [%#s692'9] let () = args in true
  
  predicate precondition'0 (self: closure2) (args: bool) = [%#s692'8] let b = args in true
  
  predicate postcondition_once'0 (self: closure1) (args: ()) (result: bool) =
    [%#s692'9] let () = args in result = UInt32.gt self._0 (7: UInt32.t)
  
  predicate resolve'4 (_0'1: closure1) = true
  
  predicate hist_inv'0 (self: closure1) (result_state: closure1) = self = result_state
  
  predicate postcondition_mut'0 (self: closure1) (args: ()) (result_state: closure1) (result: bool) =
    [%#s692'9] let () = args in result = UInt32.gt result_state._0 (7: UInt32.t) /\ hist_inv'0 self result_state
  
  function fn_mut_once'0 (self: closure1) (args: ()) (res: bool) : ()
  
  axiom fn_mut_once_spec'0: forall self: closure1, args: (), res: bool. [%#sops'5] postcondition_once'0 self args res
      = (exists res_state: closure1. postcondition_mut'0 self args res_state res /\ resolve'4 res_state)
  
  function hist_inv_trans'0 (self: closure1) (b: closure1) (c: closure1) : ()
  
  axiom hist_inv_trans_spec'0: forall self: closure1, b: closure1, c: closure1. ([%#sops'2] hist_inv'0 self b)
      -> ([%#sops'3] hist_inv'0 b c) -> ([%#sops'4] hist_inv'0 self c)
  
  function hist_inv_refl'0 (self: closure1) : ()
  
  axiom hist_inv_refl_spec'0: forall self: closure1. [%#sops'1] hist_inv'0 self self
  
  function postcondition_mut_hist_inv'0 (self: closure1) (args: ()) (res_state: closure1) (res: bool) : ()
  
  axiom postcondition_mut_hist_inv_spec'0:
    forall self: closure1, args: (), res_state: closure1, res: bool. ([%#sops] postcondition_mut'0 self args res_state res)
      -> ([%#sops'0] hist_inv'0 self res_state)
  
  function fn_hist_inv (self: closure1) (res_state: closure1) : ()
  
  axiom fn_hist_inv_spec: forall self: closure1, res_state: closure1. [%#sops'8] hist_inv'0 self res_state
      = (self = res_state)
  
  predicate postcondition (self: closure1) (args: ()) (result: bool) =
    [%#s692'9] let () = args in result = UInt32.gt self._0 (7: UInt32.t)
  
  function fn_once (self: closure1) (args: ()) (res: bool) : ()
  
  axiom fn_once_spec: forall self: closure1, args: (), res: bool. [%#sops'7] postcondition_once'0 self args res
      = (postcondition self args res /\ resolve'4 self)
  
  function fn_mut (self: closure1) (args: ()) (res_state: closure1) (res: bool) : ()
  
  axiom fn_mut_spec:
    forall self: closure1, args: (), res_state: closure1, res: bool. [%#sops'6] postcondition_mut'0 self args res_state res
      = (postcondition self args res /\ self = res_state)
  
  let rec incorrect (cond: closure1) (branch: closure2) (return' (x: ())) =
    {[@expl:incorrect requires] [%#s692'6] precondition cond ()
    /\ (forall b: bool. precondition'0 branch b
      /\ (exists b'0: bool. forall b0: bool. postcondition cond () b0 -> b0 = b'0))}
    any [ return''0 (result: ()) -> {[%#s692'7] false} (! return' {result}) ]
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec valid_normal [#"692.rs" 12 0 12 34] (n: UInt32.t) (return' (x: UInt32.t)) = (! bb0
    [ bb0 = s0
      [ s0 = [ &r <- [%#s692] (0: UInt32.t) ] s1
      | s1 = [ &cond <- { _0 = n'0 } ] s2
      | s2 = MutBorrow.borrow_mut <UInt32.t> {r}
          (fun (_ret: MutBorrow.t UInt32.t) -> [ &_7 <- _ret ] [ &r <- _ret.final ] s3)
      | s3 = [ &branch <- { _0'0 = _7 } ] s4
      | s4 = incorrect {cond} {branch} (fun (_ret: ()) -> [ &_8 <- _ret ] s5)
      | s5 = bb1 ]
    | bb1 = s0 [ s0 = [ &_0'1 <- r ] s1 | s1 = return''0 {_0'1} ] ]
    [ & _0'1: UInt32.t = Any.any_l ()
    | & n'0: UInt32.t = n
    | & r: UInt32.t = Any.any_l ()
    | & cond: closure1 = Any.any_l ()
    | & branch: closure2 = Any.any_l ()
    | & _7: MutBorrow.t UInt32.t = Any.any_l ()
    | & _8: () = Any.any_l () ])
    [ return''0 (result: UInt32.t) -> {[@expl:valid_normal ensures] [%#s692'0] false} (! return' {result}) ]
end
